2010-04-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: ([-initWithContentsOfFile:]) added ugly OSX
	compatibility hack ... return the mutable array deserialized from
	the property list rather than an instance of the same class as
	the receiver.  The original GNUstep behavior made more sense.

2010-04-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationQueue.m: Fix error traversing queue.
	Reverse direction of links in queue to be intuitive/consistent
	with other linked lists.

2010-04-12 Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Rewritten test for -Wdeclaration-after-statement
	to be more accurate.
	* configure: Regenerated.
	
2010-04-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m:
	* Headers/Foundation/NSObject.h: Document behavior of +load and
	+initialize to preserve information I'm sure I once knew but had
	forgotten.  Obscure details.

2010-04-07 Doug Simons <doug.simons@testplant.com>

	* Source/NSPathUtilities.m: Prefer USERPROFILE for the
	NSHomeDirectory() on Windows if HOMEPATH is set to '\'.

2010-04-07 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Fix for bug #29291 based on suggestion by Niels Grewe
	* Source/GSFileHandle.m: Fix possible descriptor leak.

2010-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/cifframe.m (cifframe_type): Fix the defunct test for the
	standard structure types. The failure to detect those types was
	causing a substantial space leak in some gui applications.

2010-03-29 Richard Frith-Macdonald <rfm@gnu.org>

	* config/config.ffi.c: add test for libffi functionality
	* configure.ac: use new test
	* configure: regenerate
	Greg had the good idea of testing libffi version to make sure it
	works ... unfortunately I couldn't see an easy way to test the
	version, so I added a test for functionality adapted from the
	test case I made for the libffi people to demonstrate a bug in
	passing floats on 64bit intel.
